# linisynth

./: .gitignore  101-half-gates.txt  README.md  adder.txt  all_gates.py  generate.py  generate_smt.py  get_stats.sh  half-gate.txt  linicrypt.cabal  linicrypt.py  linismt  linismt.py  linisynth.py  lt.cry  lt.sketch  one-third-gate.txt  stats.csv  synth-all-gates.sh  test.py
Linicrypt/: Program.hs
linicrypt/: normalize.py  program.py  types.py
