name:                linicrypt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/spaceships/linicrypt
-- license:
--license-file:        LICENSE
author:              Brent Carmer
maintainer:          carmerb@eecs.oregonstate.edu
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

library
  exposed-modules:
                    Linicrypt.Program
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
                     , containers
                     , bimap
                     , mtl
  -- hs-source-dirs:
  default-language:    Haskell2010

source-repository head
  type:                 git
  location:             https://github.com/spaceships/garbled-circuits
